# Aura-OS

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  pixi.toml
.github/workflows/: main.yml
aura-ai/: hello_aura.mojo  humble_core.mojo  local_ai_core.mojo
aura-bridge/: gradle.properties  settings.gradle.kts
aura-bridge/app/: build.gradle.kts  google-services.json
aura-bridge/app/src/main/: AndroidManifest.xml
aura-bridge/app/src/main/cpp/: CMakeLists.txt  LiquidRenderer.cpp  LiquidRenderer.hpp  aura_bridge_jni.cpp
aura-bridge/app/src/main/kotlin/com/aura/bridge/: AuraBridge.kt  AuraSurfaceView.kt  Main.kt  MainActivity.kt
aura-bridge/app/src/main/kotlin/com/aura/os/bridge/: AuraMediatorService.kt
aura-bridge/app/src/main/res/values/: styles.xml
aura-graphics/: CMakeLists.txt  LiquidIslandRenderer.cpp  LiquidIslandRenderer.hpp  aura_kernel.h  main.cpp
aura-graphics/shaders/: frag.spv  liquid.frag
aura-kernel/: Cargo.toml
aura-kernel/.cargo/: config.toml
aura-kernel/src/: lib.rs  main.rs  memory_manager.rs  power.rs  privacy.rs
